# AI_Tasks

RAG/: 1.0_RAG_with_own_text.ipynb  pyproject.toml  requirements.txt
RAG/LANG_GRAPH/: 1_First_Graph.ipynb  2_Pydantic.ipynb  3_messages.ipynb  5_Tools&Binding.ipynb  7_Paralleization.ipynb  8_Routing.ipynb
human-in-loop-agent/: main.py  pyproject.toml  requirements.txt
human-in-loop-agent/data/: reservations.json
human-in-loop-agent/notebooks/: 01_setup.ipynb  02_llm_verification.ipynb  03_agent1_user_agent.ipynb  04_agent2_admin_agent.ipynb  05_integration.ipynb  06_rest_api.ipynb  07_persistent_storage.ipynb  08_error_handling_validation.ipynb
human-in-loop-agent/tests/: test_agent1.py  test_agent2.py  test_integration.py  test_storage.py
parking-rag-system/: README.md  main.py  pyproject.toml  requirements.txt
parking-rag-system/app/: approval_terminal.py  chat_terminal.py  main.py  run_graph.py  temp.py  user_chatbot_terminal.py
parking-rag-system/app/agents/: approval_agent.py  reservation_agent.py  state_manager.py  user_chatbot_agent.py
parking-rag-system/app/graph/: graph_nodes.py  graph_state.py  workflow.py
parking-rag-system/app/guardrails/: security.py
parking-rag-system/app/mcp/: reservation_server.py  reservation_writer.py
parking-rag-system/app/rag/: rag_utils.py
parking-rag-system/app/utils/: availability.py  reservation.py
parking-rag-system/data/chroma_db/: chroma.sqlite3
parking-rag-system/data/dynamic/: parking_dynamic.csv
parking-rag-system/data/reservations/: approved_reservations.json
parking-rag-system/data/static/: parking_info.txt
parking-rag-system/data/storage/: confirmed_reservations.txt
parking-rag-system/docs/: architecture.md  evaluation_report.csv
parking-rag-system/notebooks/stage1/: 01_environment_setup.ipynb  02_build_vector_database.ipynb  03_rag_chatbot.ipynb
parking-rag-system/tests/: test_agents.py  test_availability.py  test_guardrails.py  test_langgraph.py  test_mcp.py  test_mcp_api.py  test_reservation.py  test_retrieval.py
