[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated>=0.0.2",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "chroma>=0.2.0",
    "chromadb>=1.5.9",
    "colorama==0.4.6",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.20",
    "decorator==5.3.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "executing==2.2.1",
    "frozenlist==1.8.0",
    "greenlet==3.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.15",
    "ipykernel==7.2.0",
    "ipython==9.13.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jiter==0.15.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "langchain-classic==1.0.7",
    "langchain-community==0.4.1",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.1",
    "langchain-protocol==0.0.15",
    "langchain-text-splitters==1.1.2",
    "langgraph>=1.2.0",
    "langsmith==0.8.5",
    "marshmallow==3.26.2",
    "matplotlib-inline==0.2.2",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.6",
    "openai==2.37.0",
    "orjson==3.11.9",
    "packaging==26.2",
    "parso==0.8.7",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.0",
    "wcwidth==0.7.0",
    "xxhash==3.7.0",
    "yarl==1.24.2",
    "zstandard==0.25.0",
]
